# mcp-rag-starter

./: .gitignore  README.md  main.py  pyproject.toml
docs/: llms-full.txt
